login and home done

--- a/MOHEswatini/Views/Logins/Index.cshtml
+++ b/MOHEswatini/Views/Logins/Index.cshtml
@@ -9,7 +9,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>AdminLTE 3 | Log in</title>
+    <title>Ministry Of Health | Log in</title>
 
     <!-- Google Font: Source Sans Pro -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
@@ -23,32 +23,24 @@
 <body class="hold-transition login-page">
     <div class="login-box">
         <div class="login-logo">
-            <a href="#"><b>Ministry of Health</b><br />Kingdom Of Eswatini</a>
+            <div class="image">
+                <img src="../dist/img/Health-header.png" class="card-img-top elevation-2" alt="User Image" >
+            </div>
+            @*<a href="#"><b>Ministry of Health</b><br />Kingdom Of Eswatini</a>*@
         </div>
         <!-- /.login-logo -->
         <div class="card">
             <div class="card-body login-card-body">
                 <p class="login-box-msg">Sign in to start your session</p>
-
-                <form action="" method="post" id="quickForm">
-                    <div class="input-group mb-3">
-                        <input asp-for="UserID" type="email" class="form-control" placeholder="Email" />
-                        <span asp-validation-for="UserID" class="text-danger"></span>
-                        <div class="input-group-append">
-                            <div class="input-group-text">
-                                <span class="fas fa-envelope"></span>
-                            </div>
-                        </div>
+                
+                <form asp-action="Index" method="post" id="quickForm">
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Email address</label>
+                        <input asp-for="UserID" type="email" name="UserID" class="form-control" placeholder="Enter email">
                     </div>
-                    <div class="input-group mb-3">
-
-                        <input asp-for="Password" type="password" class="form-control" placeholder="Password" />
-                        <span asp-validation-for="Password" class="text-danger"></span>
-                        <div class="input-group-append">
-                            <div class="input-group-text">
-                                <span class="fas fa-lock"></span>
-                            </div>
-                        </div>
+                    <div class="form-group">
+                        <label for="exampleInputPassword1">Password</label>
+                        <input asp-for="Password" type="password" name="Password" class="form-control" id="exampleInputPassword1" placeholder="Password">
                     </div>
                     <div class="row">
                         <div class="col-8">
@@ -59,30 +51,37 @@
                                 </label>
                             </div>
                         </div>
+
                         <!-- /.col -->
                         <div class="col-4">
-                            <button type="submit" class="btn btn-primary btn-block">Sign In</button>
+                            <button type="submit" value="Index" class="btn btn-primary btn-block">Sign In</button>
+                        </div>
+                        <!-- /.col -->
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <div asp-validation-summary="ModelOnly" class="text-danger font-italic"></div>
                         </div>
                         <!-- /.col -->
                     </div>
                 </form>
 
-                @*<div class="social-auth-links text-center mb-3">
-                        <p>- OR -</p>
-                        <a href="#" class="btn btn-block btn-primary">
-                            <i class="fab fa-facebook mr-2"></i> Sign in using Facebook
-                        </a>
-                        <a href="#" class="btn btn-block btn-danger">
-                            <i class="fab fa-google-plus mr-2"></i> Sign in using Google+
-                        </a>
-                    </div>*@
+                <div class="social-auth-links text-center mb-3">
+                    <p>&nbsp;&nbsp;</p>
+            <a asp-action="Index" asp-controller="Home" class="btn btn-block btn-danger">
+                <i class="fas fa-home mr-2"></i> Home
+            </a>
+            @*<a href="#" class="btn btn-block btn-danger">
+                <i class="fab fa-google-plus mr-2"></i> Sign in using Google+
+            </a>*@
+        </div>
                 <!-- /.social-auth-links -->
                 @*<p class="mb-1">
-                        <a href="forgot-password.html">I forgot my password</a>
-                    </p>
-                    <p class="mb-0">
-                        <a href="register.html" class="text-center">Register a new membership</a>
-                    </p>*@
+            <a href="forgot-password.html">I forgot my password</a>
+        </p>
+        <p class="mb-0">
+            <a href="register.html" class="text-center">Register a new membership</a>
+        </p>*@
             </div>
             <!-- /.login-card-body -->
         </div>
@@ -99,18 +98,18 @@
     <script src="~/dist/js/adminlte.min.js"></script>
     <script>
         $(function () {
-            $.validator.setDefaults({
-                submitHandler: function () {
-                    alert("Form successful submitted!");
-                }
-            });
+            //$.validator.setDefaults({
+            //    submitHandler: function () {
+            //        alert("Form successful submitted!");
+            //    }
+            //});
             $('#quickForm').validate({
                 rules: {
-                    email: {
+                    UserID: {
                         required: true,
                         email: true,
                     },
-                    password: {
+                    Password: {
                         required: true,
                         minlength: 5
                     },
@@ -119,11 +118,11 @@
                     },
                 },
                 messages: {
-                    email: {
+                    UserID: {
                         required: "Please enter a email address",
                         email: "Please enter a vaild email address"
                     },
-                    password: {
+                    Password: {
                         required: "Please provide a password",
                         minlength: "Your password must be at least 5 characters long"
                     },
