--- a/MOHEswatini/Views/Shared/_Layout.cshtml
+++ b/MOHEswatini/Views/Shared/_Layout.cshtml
@@ -10,6 +10,9 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
     <title>@ViewBag.Title | Ministry Of Health</title>
+    <!-- Favicons -->
+    <link href="../dist/img/Swazi32x32.png" rel="icon">
+    <link href="../dist/img/Swazi32x32.png" rel="apple-touch-icon">
 
     <!-- Font Awesome Icons -->
     <link rel="stylesheet" href="../../plugins/fontawesome-free/css/all.min.css">
