--- a/MOHEswatini/Views/Shared/_LayoutDashboard.cshtml
+++ b/MOHEswatini/Views/Shared/_LayoutDashboard.cshtml
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>@ViewBag.Title</title>
+    <link href="../../dist/img/Swazi32x32.png" rel="icon">
+    <link href="../../dist/img/Swazi32x32.png" rel="apple-touch-icon">
     <!-- Tell the browser to be responsive to screen width -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Font Awesome -->
@@ -65,7 +67,7 @@
                     <a class="nav-link" data-toggle="dropdown" href="#">
 
                         <div class="image">
-                            <img src="~/dist/img/avatar.png" class="img-circle elevation-2" alt="User Image" width="35px;">
+                            <img src="../../dist/img/avatar.png" class="img-circle elevation-2" alt="User Image" width="35px;">
                         </div>
                     </a>
                     <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
@@ -98,7 +100,7 @@
         <aside class="main-sidebar sidebar-dark-primary elevation-4">
             <!-- Brand Logo -->
             <a href="index3.html" class="brand-link">
-                <img src="~/dist/img/MOHLogo128.png" alt="Ministry Of Health" class="brand-image img-circle elevation-3"
+                <img src="../../dist/img/MOHLogo128.png" alt="Ministry Of Health" class="brand-image img-circle elevation-3"
                      style="opacity: .8">
                 <span class="brand-text font-weight-light">Ministry Of Health</span>
             </a>
