--- a/MOHEswatini/Views/Logins/Index.cshtml
+++ b/MOHEswatini/Views/Logins/Index.cshtml
@@ -10,7 +10,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Ministry Of Health | Log in</title>
-
+    <link href="../dist/img/Swazi32x32.png" rel="icon">
+    <link href="../dist/img/Swazi32x32.png" rel="apple-touch-icon">
     <!-- Google Font: Source Sans Pro -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
     <!-- Font Awesome -->
@@ -24,7 +25,7 @@
     <div class="login-box">
         <div class="login-logo">
             <div class="image">
-                <img src="../dist/img/Health-header.png" class="card-img-top elevation-2" alt="User Image" >
+                <img src="../../dist/img/Health-header.png" class="card-img-top elevation-2" alt="Ministry Of Health" title="Ministry Of Health" >
             </div>
             @*<a href="#"><b>Ministry of Health</b><br />Kingdom Of Eswatini</a>*@
         </div>
@@ -54,7 +55,7 @@
 
                         <!-- /.col -->
                         <div class="col-4">
-                            <button type="submit" value="Index" class="btn btn-primary btn-block">Sign In</button>
+                            <button type="submit" value="Index" class="btn btn-primary btn-block"> <i class="fas fa-sign-in-alt"></i> Sign In</button>
                         </div>
                         <!-- /.col -->
                     </div>
