--- a/MOHEswatini/Views/Shared/_LayoutDashboard.cshtml
+++ b/MOHEswatini/Views/Shared/_LayoutDashboard.cshtml
@@ -253,7 +253,7 @@
         </div>
         <!-- /.content-wrapper -->
         <footer class="main-footer">
-            <strong>Copyright &copy; @DateTime.Now.Year <a href="https://arnikainfotech.com" target="_blank">Developed By Arnika Technogies</a>.</strong>
+            <strong>Copyright &copy; @DateTime.Now.Year <a href="https://arnikainfotech.com" target="_blank">Developed By Arnika Technologies</a>.</strong>
             All rights reserved.
             <div class="float-right d-none d-sm-inline-block">
                 <b>Version</b> 1.0.0
