print Testing Completed

--- a/MOHEswatini/Views/DiseaseSurveillances/Index.cshtml
+++ b/MOHEswatini/Views/DiseaseSurveillances/Index.cshtml
@@ -76,7 +76,7 @@
                         <a asp-action="Edit" asp-route-id="@item.iID" class="btn btn-warning btn-sm" title="Edit Details"><i class="fas fa-pencil-alt"></i></a>
                         <a asp-action="Details" asp-route-id="@item.iID" class="btn btn-primary btn-sm" title="View Details"><i class="fas fa-eye"></i></a>
                         <a asp-action="Delete" asp-route-id="@item.iID" class="btn btn-danger btn-sm" title="Remove Record"><i class="fas fa-trash"></i></a>
-                        <a asp-action="Details" asp-route-id="@item.iID" class="btn btn-success btn-sm" title="Print Record"><i class="fas fa-print"></i></a>
+                        <a asp-action="Print" asp-route-id="@item.iID" class="btn btn-success btn-sm" title="Print Record" target="_blank"><i class="fas fa-print"></i></a>
                     </td>
                 </tr>
                 }
