--- a/MOHEswatini/Views/Shared/_Layout.cshtml
+++ b/MOHEswatini/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
         <nav class="main-header navbar navbar-expand-md navbar-light navbar-white">
             <div class="container">
                 <a href="#" class="navbar-brand">
-                    <img src="~/dist/img/MOHLogo128.png" alt="AdminLTE Logo" class="brand-image">
+                    <img src="~/dist/img/MOHLogo128.png" alt="Ministry Of Health Logo" title="Ministry Of Health" class="brand-image">
                     <span class="brand-text font-weight-bold">Ministry Of Health</span>
                     <span class="font-weight-lighter">[Kingdom Of Eswatini]</span>
                 </a>
