--- a/MOHEswatini/Views/DiseaseSurveillances/Print.cshtml
+++ b/MOHEswatini/Views/DiseaseSurveillances/Print.cshtml
@@ -4,13 +4,20 @@
     ViewData["Title"] = "Disease Surveillance Arrival Details";
     Layout = null;
 }
-<HTML>
+<html>
 
-<HEAD>
-    <title>Ministry Of Health | @ViewBag.Tilte</title>
-</HEAD>
+<head>
+    <title>Ministry Of Health | Disease Surveillance Arrival Details</title>
+    <style>
+       /* body {
+            background-image: url("../../dist/img/swaziland.png");
+            background-color: #ffffff;
+        }*/
+    </style>
+</head>
 
-<BODY>
+<body>
+
     <style>
         div {
             position: absolute;
@@ -920,8 +927,8 @@
     </div>
     <script type="text/javascript">
 
-          window.addEventListener("load", window.print());
+          //window.addEventListener("load", window.print());
     </script>
-</BODY>
+</body>
 
-</HTML>
+</html>
