--- a/MOHEswatini/Views/Home/DashBoard.cshtml
+++ b/MOHEswatini/Views/Home/DashBoard.cshtml
@@ -4,5 +4,183 @@
     Layout = "~/Views/Shared/_LayoutDashboard.cshtml";
 }
 
-<h1>DashBoard</h1>
+<div class="text-center">
+    <h1 class="display-3">Welcome To Ministry Of Health</h1>
+    <h1 class="display-4">Kingdom Of Eswatini</h1>
+</div>
+<h5 class="mb-2">COVID-19 UPDATE</h5>
+<div class="row">
+    <div class="col-lg-3 col-6">
+        <!-- small card -->
+        <div class="small-box bg-primary">
+            <div class="inner">
+                <h3>520</h3>
 
+                <p>Total Case</p>
+            </div>
+
+            <a href="#" class="small-box-footer">
+                More info <i class="fas fa-arrow-circle-right"></i>
+            </a>
+        </div>
+    </div>
+    <!-- ./col -->
+    <div class="col-lg-3 col-6">
+        <!-- small card -->
+        <div class="small-box bg-warning">
+            <div class="inner">
+                <h3>53</h3>
+
+                <p>Admitted</p>
+            </div>
+
+            <a href="#" class="small-box-footer">
+                More info <i class="fas fa-arrow-circle-right"></i>
+            </a>
+        </div>
+    </div>
+    <!-- ./col -->
+    <div class="col-lg-3 col-6">
+        <!-- small card -->
+        <div class="small-box bg-info">
+            <div class="inner">
+                <h3>123</h3>
+
+                <p>Home Care</p>
+            </div>
+
+            <a href="#" class="small-box-footer">
+                More info <i class="fas fa-arrow-circle-right"></i>
+            </a>
+        </div>
+    </div>
+    <!-- ./col -->
+    <div class="col-lg-3 col-6">
+        <!-- small card -->
+        <div class="small-box bg-success">
+            <div class="inner">
+                <h3>259</h3>
+
+                <p>Recovered </p>
+            </div>
+
+            <a href="#" class="small-box-footer">
+                More info <i class="fas fa-arrow-circle-right"></i>
+            </a>
+        </div>
+    </div>
+    <!-- ./col -->
+</div>
+<!-- /.row -->
+
+<div class="row">
+    <div class="col-lg-3 col-6">
+        <!-- small card -->
+        <div class="small-box bg-danger">
+            <!-- Loading (remove the following to stop the loading)-->
+            <!-- end loading -->
+            <div class="inner">
+                <h3>4</h3>
+
+                <p>Deaths</p>
+            </div>
+
+            <a href="#" class="small-box-footer">
+                More info <i class="fas fa-arrow-circle-right"></i>
+            </a>
+        </div>
+    </div>
+    <!-- ./col -->
+    <div class="col-lg-3 col-6">
+        <!-- small card -->
+        <div class="small-box bg-fuchsia">
+            <!-- Loading (remove the following to stop the loading)-->
+            <!-- end loading -->
+            <div class="inner">
+                <h3>14</h3>
+
+                <p>Registration for care </p>
+            </div>
+
+            <a href="#" class="small-box-footer">
+                More info <i class="fas fa-arrow-circle-right"></i>
+            </a>
+        </div>
+    </div>
+    <!-- ./col -->
+    <!-- ./col -->
+    <div class="col-lg-3 col-6">
+        <!-- small card -->
+        <div class="small-box bg-secondary">
+            <!-- Loading (remove the following to stop the loading)-->
+            <!-- end loading -->
+            <div class="inner">
+                <h3>0</h3>
+
+                <p>Pending registration </p>
+            </div>
+
+            <a href="#" class="small-box-footer">
+                More info <i class="fas fa-arrow-circle-right"></i>
+            </a>
+        </div>
+    </div>
+    <!-- ./col -->
+</div>
+<!-- /.row -->
+<h5 class="mb-2">Cumulative COVID-19 cases by region</h5>
+<div class="row">
+    <div class="col-md-3 col-sm-6 col-12">
+        <div class="info-box">
+            <span class="info-box-icon bg-info"><i class="far fa-flag"></i></span>
+
+            <div class="info-box-content">
+                <span class="info-box-text">Shiselweni</span>
+                <span class="info-box-number">37</span>
+            </div>
+            <!-- /.info-box-content -->
+        </div>
+        <!-- /.info-box -->
+    </div>
+    <!-- /.col -->
+    <div class="col-md-3 col-sm-6 col-12">
+        <div class="info-box">
+            <span class="info-box-icon bg-success"><i class="far fa-flag"></i></span>
+
+            <div class="info-box-content">
+                <span class="info-box-text">Manzini</span>
+                <span class="info-box-number">314</span>
+            </div>
+            <!-- /.info-box-content -->
+        </div>
+        <!-- /.info-box -->
+    </div>
+    <!-- /.col -->
+    <div class="col-md-3 col-sm-6 col-12">
+        <div class="info-box">
+            <span class="info-box-icon bg-warning"><i class="far fa-flag"></i></span>
+
+            <div class="info-box-content">
+                <span class="info-box-text">Hhohho</span>
+                <span class="info-box-number">112</span>
+            </div>
+            <!-- /.info-box-content -->
+        </div>
+        <!-- /.info-box -->
+    </div>
+    <!-- /.col -->
+    <div class="col-md-3 col-sm-6 col-12">
+        <div class="info-box">
+            <span class="info-box-icon bg-danger"><i class="far fa-flag"></i></span>
+
+            <div class="info-box-content">
+                <span class="info-box-text">Lubombo</span>
+                <span class="info-box-number">57</span>
+            </div>
+            <!-- /.info-box-content -->
+        </div>
+        <!-- /.info-box -->
+    </div>
+    <!-- /.col -->
+</div>
+<!-- /.row -->
