--- a/MOHEswatini/Views/Shared/_Layout.cshtml
+++ b/MOHEswatini/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="#">
+                            <a class="nav-link text-dark" asp-action="SearchResult" asp-controller="Home">
                                 <i class="fas fa-search"></i> Search Test Result
                             </a>
                         </li>
