--- a/MOHEswatini/Views/Shared/_Layout.cshtml
+++ b/MOHEswatini/Views/Shared/_Layout.cshtml
@@ -91,7 +91,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
         <footer class="main-footer">
             <!-- To the right -->
             <div class="float-right d-none d-sm-inline">
-                    Design & Developed By <a href="https://arnikainfotech.com" target="_blank">Arnika Technologies</a>
+                    Design & Developed By <a href="https://arnikainfotech.com" target="_blank">3S ESWATINI IT SERVICES (PTY) LTD</a>
                 </div>
             <!-- Default to the left -->
             <strong class="">Copyright &copy; @DateTime.Now.Year <a href="http://www.gov.sz/index.php/ministries-departments/ministry-of-health" target="_blank">Ministry Of Health</a>.</strong> All rights reserved.
