--- a/MOHEswatini/Views/DiseaseSurveillances/Print.cshtml
+++ b/MOHEswatini/Views/DiseaseSurveillances/Print.cshtml
@@ -927,7 +927,7 @@
     </div>
     <script type="text/javascript">
 
-          //window.addEventListener("load", window.print());
+       window.addEventListener("load", window.print());
     </script>
 </body>
 
