--- a/MOHEswatini/Views/Shared/_LayoutDashboard.cshtml
+++ b/MOHEswatini/Views/Shared/_LayoutDashboard.cshtml
@@ -134,7 +134,7 @@
                         <!-- Add icons to the links using the .nav-icon class
                         with font-awesome or any other icon font library -->
                         <li class="nav-item has-treeview menu-open">
-                            <a href="#" class="nav-link active">
+                            <a asp-action="Dashboard" asp-controller="Home" class="nav-link active">
                                 <i class="nav-icon fas fa-tachometer-alt"></i>
                                 <p>
                                     Dashboard
@@ -167,7 +167,7 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="pages/layout/boxed.html" class="nav-link">
+                                    <a href="#" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Search Entry</p>
                                     </a>
@@ -186,7 +186,7 @@
                             </a>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
-                                    <a href="pages/layout/top-nav.html" class="nav-link">
+                                    <a href="#" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Covid-Test Report</p>
                                     </a>
@@ -198,7 +198,7 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="pages/layout/boxed.html" class="nav-link">
+                                    <a href="#" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Covid-Test Summary</p>
                                     </a>
@@ -264,7 +264,7 @@
         </div>
         <!-- /.content-wrapper -->
         <footer class="main-footer">
-            <strong>Copyright &copy; @DateTime.Now.Year <a href="https://arnikainfotech.com" target="_blank">Developed By Arnika Technologies</a>.</strong>
+            <strong>Copyright &copy; @DateTime.Now.Year <a href="https://arnikainfotech.com" target="_blank">Developed By 3S ESWATINI IT SERVICES (PTY) LTD</a>.</strong>
             All rights reserved.
             <div class="float-right d-none d-sm-inline-block">
                 <b>Version</b> 1.0.0
